fixed alignment issue

--- a/public/css/custom.styl
+++ b/public/css/custom.styl
@@ -66,7 +66,7 @@ https://github.com/joemccann/dillinger/issues/126
   color blue
 
 #github-button
-  margin: 1% -9px 0 0
+  margin: 1% -3px 0 0
   float: right
 
 #filename-counter-container
